# parallel_search

./: .gitignore
examples/manipulation/: run_manipulation.cpp
scripts/: abb_fkik_solver.py  generate_start_goal.py
scripts/python/brain2/bullet/: fake_control.py  ik.py  problems.py  pybullet_tools_utils.py
scripts/python/brain2/robot/: __init__.py  affordance.py  connectors.py  entity.py  kitchen.py  kitchen_poses.py  surface.py
scripts/python/brain2/utils/: camera.py  image.py  info.py  parser.py  pose.py  sampling.py
scripts/shohin_brain/python/brain2/bullet/: fake_observer.py  interface.py  load.py
scripts/shohin_brain/python/brain2/conditions/: approach.py  position.py
scripts/shohin_brain/python/brain2/datasets/: acronym.py  shapenet.py
scripts/shohin_brain/python/brain2/domains/: handover.py  leonardo.py
scripts/shohin_brain/python/brain2/flat_world/: interface.py  planar_arm.py  problems.py  test_utils.py  tree_io.py
scripts/shohin_brain/python/brain2/gym/: experiment.py  franka_data.py  franka_kitchen.py  franka_table.py  manager.py  urdf.py  visualizer.py
scripts/shohin_brain/python/brain2/language/: data.py  parsing.py  vocab.py
scripts/shohin_brain/python/brain2/learning/: h5f_loader.py  image.py  mask_model.py  mdn.py  models.py  nts.py  parser.py  planner.py  points.py  quaternion.py  (+4 more)
scripts/shohin_brain/ros/brain2_msgs/: CMakeLists.txt  package.xml
scripts/shohin_brain/ros/brain2_msgs/msg/: Attach.msg  Goal.msg  Grasp.msg  HandStatus.msg  Predicate.msg  PredicateList.msg  TrackedBody.msg
scripts/shohin_brain/ros/brain2_msgs/srv/: GetPath.srv
scripts/shohin_brain/ros/brain2_ros/: CMakeLists.txt  package.xml  setup.py
(+89 files in other folders)
