<?xml version="1.0"?>
<package format="2">
  <name>brain2_msgs</name>
  <version>0.0.0</version>
  <description>The brain2_msgs package</description>
  <maintainer email="chris@todo.todo">chris</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <export>
  </export>
</package>
